// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package manager files written properly 1`] = `
Array [
  "/node_modules/bignumber.js/CHANGELOG.md",
  "/node_modules/bignumber.js/README.md",
  "/node_modules/bignumber.js/bignumber.d.ts",
  "/node_modules/bignumber.js/bignumber.js",
  "/node_modules/bignumber.js/bignumber.js.map",
  "/node_modules/bignumber.js/bignumber.min.js",
  "/node_modules/bignumber.js/bignumber.mjs",
  "/node_modules/bignumber.js/bower.json",
  "/node_modules/bignumber.js/doc/API.html",
  "/node_modules/bignumber.js/package.json",
  "/node_modules/js-tokens/CHANGELOG.md",
  "/node_modules/js-tokens/LICENSE",
  "/node_modules/js-tokens/README.md",
  "/node_modules/js-tokens/index.js",
  "/node_modules/js-tokens/package.json",
  "/node_modules/loose-envify/LICENSE",
  "/node_modules/loose-envify/README.md",
  "/node_modules/loose-envify/cli.js",
  "/node_modules/loose-envify/custom.js",
  "/node_modules/loose-envify/index.js",
  "/node_modules/loose-envify/loose-envify.js",
  "/node_modules/loose-envify/package.json",
  "/node_modules/loose-envify/replace.js",
  "/node_modules/object-assign/index.js",
  "/node_modules/object-assign/package.json",
  "/node_modules/object-assign/readme.md",
  "/node_modules/prop-types/CHANGELOG.md",
  "/node_modules/prop-types/LICENSE",
  "/node_modules/prop-types/README.md",
  "/node_modules/prop-types/checkPropTypes.js",
  "/node_modules/prop-types/factory.js",
  "/node_modules/prop-types/factoryWithThrowingShims.js",
  "/node_modules/prop-types/factoryWithTypeCheckers.js",
  "/node_modules/prop-types/index.js",
  "/node_modules/prop-types/lib/ReactPropTypesSecret.js",
  "/node_modules/prop-types/package.json",
  "/node_modules/prop-types/prop-types.js",
  "/node_modules/prop-types/prop-types.min.js",
  "/node_modules/react-dom/LICENSE",
  "/node_modules/react-dom/README.md",
  "/node_modules/react-dom/cjs/react-dom-server.browser.development.js",
  "/node_modules/react-dom/cjs/react-dom-server.browser.production.min.js",
  "/node_modules/react-dom/cjs/react-dom-server.node.development.js",
  "/node_modules/react-dom/cjs/react-dom-server.node.production.min.js",
  "/node_modules/react-dom/cjs/react-dom-test-utils.development.js",
  "/node_modules/react-dom/cjs/react-dom-test-utils.production.min.js",
  "/node_modules/react-dom/cjs/react-dom-unstable-native-dependencies.development.js",
  "/node_modules/react-dom/cjs/react-dom-unstable-native-dependencies.production.min.js",
  "/node_modules/react-dom/cjs/react-dom.development.js",
  "/node_modules/react-dom/cjs/react-dom.production.min.js",
  "/node_modules/react-dom/cjs/react-dom.profiling.min.js",
  "/node_modules/react-dom/index.js",
  "/node_modules/react-dom/package.json",
  "/node_modules/react-dom/profiling.js",
  "/node_modules/react-dom/server.browser.js",
  "/node_modules/react-dom/server.js",
  "/node_modules/react-dom/server.node.js",
  "/node_modules/react-dom/test-utils.js",
  "/node_modules/react-dom/umd/react-dom-server.browser.development.js",
  "/node_modules/react-dom/umd/react-dom-server.browser.production.min.js",
  "/node_modules/react-dom/umd/react-dom-test-utils.development.js",
  "/node_modules/react-dom/umd/react-dom-test-utils.production.min.js",
  "/node_modules/react-dom/umd/react-dom-unstable-native-dependencies.development.js",
  "/node_modules/react-dom/umd/react-dom-unstable-native-dependencies.production.min.js",
  "/node_modules/react-dom/umd/react-dom.development.js",
  "/node_modules/react-dom/umd/react-dom.production.min.js",
  "/node_modules/react-dom/umd/react-dom.profiling.min.js",
  "/node_modules/react-dom/unstable-native-dependencies.js",
  "/node_modules/schedule/LICENSE",
  "/node_modules/schedule/README.md",
  "/node_modules/schedule/cjs/schedule-tracing.development.js",
  "/node_modules/schedule/cjs/schedule-tracing.production.min.js",
  "/node_modules/schedule/cjs/schedule-tracing.profiling.min.js",
  "/node_modules/schedule/cjs/schedule.development.js",
  "/node_modules/schedule/cjs/schedule.production.min.js",
  "/node_modules/schedule/index.js",
  "/node_modules/schedule/package.json",
  "/node_modules/schedule/tracing-profiling.js",
  "/node_modules/schedule/tracing.js",
  "/node_modules/schedule/umd/schedule-tracing.development.js",
  "/node_modules/schedule/umd/schedule-tracing.production.min.js",
  "/node_modules/schedule/umd/schedule-tracing.profiling.min.js",
  "/node_modules/schedule/umd/schedule.development.js",
  "/node_modules/schedule/umd/schedule.production.min.js",
  "/node_modules/schedule/umd/schedule.profiling.min.js",
]
`;

exports[`package manager node_modules updated 1`] = `
Array [
  "/node_modules/bignumber.js/CHANGELOG.md",
  "/node_modules/bignumber.js/CHANGELOG.md",
  "/node_modules/bignumber.js/README.md",
  "/node_modules/bignumber.js/README.md",
  "/node_modules/bignumber.js/bignumber.d.ts",
  "/node_modules/bignumber.js/bignumber.d.ts",
  "/node_modules/bignumber.js/bignumber.js",
  "/node_modules/bignumber.js/bignumber.js",
  "/node_modules/bignumber.js/bignumber.js.map",
  "/node_modules/bignumber.js/bignumber.js.map",
  "/node_modules/bignumber.js/bignumber.min.js",
  "/node_modules/bignumber.js/bignumber.min.js",
  "/node_modules/bignumber.js/bignumber.mjs",
  "/node_modules/bignumber.js/bignumber.mjs",
  "/node_modules/bignumber.js/bower.json",
  "/node_modules/bignumber.js/bower.json",
  "/node_modules/bignumber.js/doc/API.html",
  "/node_modules/bignumber.js/doc/API.html",
  "/node_modules/bignumber.js/package.json",
  "/node_modules/bignumber.js/package.json",
  "/node_modules/js-tokens/CHANGELOG.md",
  "/node_modules/js-tokens/LICENSE",
  "/node_modules/js-tokens/README.md",
  "/node_modules/js-tokens/index.js",
  "/node_modules/js-tokens/package.json",
  "/node_modules/loose-envify/LICENSE",
  "/node_modules/loose-envify/README.md",
  "/node_modules/loose-envify/cli.js",
  "/node_modules/loose-envify/custom.js",
  "/node_modules/loose-envify/index.js",
  "/node_modules/loose-envify/loose-envify.js",
  "/node_modules/loose-envify/package.json",
  "/node_modules/loose-envify/replace.js",
  "/node_modules/lru-cache/LICENSE",
  "/node_modules/lru-cache/README.md",
  "/node_modules/lru-cache/index.js",
  "/node_modules/lru-cache/package.json",
  "/node_modules/object-assign/index.js",
  "/node_modules/object-assign/package.json",
  "/node_modules/object-assign/readme.md",
  "/node_modules/onigasm/.gitmodules",
  "/node_modules/onigasm/.vscode",
  "/node_modules/onigasm/LICENSE",
  "/node_modules/onigasm/README.md",
  "/node_modules/onigasm/benchmark.js",
  "/node_modules/onigasm/lib/OnigRegExp.js",
  "/node_modules/onigasm/lib/OnigRegExp.js.map",
  "/node_modules/onigasm/lib/OnigScanner.js",
  "/node_modules/onigasm/lib/OnigScanner.js.map",
  "/node_modules/onigasm/lib/OnigString.js",
  "/node_modules/onigasm/lib/OnigString.js.map",
  "/node_modules/onigasm/lib/UTF8Encoder.js",
  "/node_modules/onigasm/lib/UTF8Encoder.js.map",
  "/node_modules/onigasm/lib/index.js",
  "/node_modules/onigasm/lib/index.js.map",
  "/node_modules/onigasm/lib/onigasm.js",
  "/node_modules/onigasm/lib/onigasm.wasm",
  "/node_modules/onigasm/lib/onigasm.wasm.map",
  "/node_modules/onigasm/lib/onigasm.wasm.pre",
  "/node_modules/onigasm/lib/onigasm.wast",
  "/node_modules/onigasm/lib/onigasm.wat",
  "/node_modules/onigasm/lib/onigasmH.js",
  "/node_modules/onigasm/lib/onigasmH.js.map",
  "/node_modules/onigasm/lib/typings/OnigRegExp.d.ts",
  "/node_modules/onigasm/lib/typings/OnigScanner.d.ts",
  "/node_modules/onigasm/lib/typings/OnigString.d.ts",
  "/node_modules/onigasm/lib/typings/UTF8Encoder.d.ts",
  "/node_modules/onigasm/lib/typings/index.d.ts",
  "/node_modules/onigasm/lib/typings/onigasmH.d.ts",
  "/node_modules/onigasm/package.json",
  "/node_modules/onigasm/scripts/build.sh",
  "/node_modules/onigasm/src/OnigRegExp.ts",
  "/node_modules/onigasm/src/OnigScanner.ts",
  "/node_modules/onigasm/src/OnigString.ts",
  "/node_modules/onigasm/src/index.ts",
  "/node_modules/onigasm/src/onigasm.cc",
  "/node_modules/onigasm/src/onigasmH.ts",
  "/node_modules/onigasm/tsconfig.json",
  "/node_modules/onigasm/tslint.json",
  "/node_modules/prop-types/CHANGELOG.md",
  "/node_modules/prop-types/LICENSE",
  "/node_modules/prop-types/README.md",
  "/node_modules/prop-types/checkPropTypes.js",
  "/node_modules/prop-types/factory.js",
  "/node_modules/prop-types/factoryWithThrowingShims.js",
  "/node_modules/prop-types/factoryWithTypeCheckers.js",
  "/node_modules/prop-types/index.js",
  "/node_modules/prop-types/lib/ReactPropTypesSecret.js",
  "/node_modules/prop-types/package.json",
  "/node_modules/prop-types/prop-types.js",
  "/node_modules/prop-types/prop-types.min.js",
  "/node_modules/pseudomap/LICENSE",
  "/node_modules/pseudomap/README.md",
  "/node_modules/pseudomap/map.js",
  "/node_modules/pseudomap/package.json",
  "/node_modules/pseudomap/pseudomap.js",
  "/node_modules/pseudomap/test/basic.js",
  "/node_modules/react-dom/LICENSE",
  "/node_modules/react-dom/README.md",
  "/node_modules/react-dom/cjs/react-dom-server.browser.development.js",
  "/node_modules/react-dom/cjs/react-dom-server.browser.production.min.js",
  "/node_modules/react-dom/cjs/react-dom-server.node.development.js",
  "/node_modules/react-dom/cjs/react-dom-server.node.production.min.js",
  "/node_modules/react-dom/cjs/react-dom-test-utils.development.js",
  "/node_modules/react-dom/cjs/react-dom-test-utils.production.min.js",
  "/node_modules/react-dom/cjs/react-dom-unstable-native-dependencies.development.js",
  "/node_modules/react-dom/cjs/react-dom-unstable-native-dependencies.production.min.js",
  "/node_modules/react-dom/cjs/react-dom.development.js",
  "/node_modules/react-dom/cjs/react-dom.production.min.js",
  "/node_modules/react-dom/cjs/react-dom.profiling.min.js",
  "/node_modules/react-dom/index.js",
  "/node_modules/react-dom/package.json",
  "/node_modules/react-dom/profiling.js",
  "/node_modules/react-dom/server.browser.js",
  "/node_modules/react-dom/server.js",
  "/node_modules/react-dom/server.node.js",
  "/node_modules/react-dom/test-utils.js",
  "/node_modules/react-dom/umd/react-dom-server.browser.development.js",
  "/node_modules/react-dom/umd/react-dom-server.browser.production.min.js",
  "/node_modules/react-dom/umd/react-dom-test-utils.development.js",
  "/node_modules/react-dom/umd/react-dom-test-utils.production.min.js",
  "/node_modules/react-dom/umd/react-dom-unstable-native-dependencies.development.js",
  "/node_modules/react-dom/umd/react-dom-unstable-native-dependencies.production.min.js",
  "/node_modules/react-dom/umd/react-dom.development.js",
  "/node_modules/react-dom/umd/react-dom.production.min.js",
  "/node_modules/react-dom/umd/react-dom.profiling.min.js",
  "/node_modules/react-dom/unstable-native-dependencies.js",
  "/node_modules/schedule/LICENSE",
  "/node_modules/schedule/README.md",
  "/node_modules/schedule/cjs/schedule-tracing.development.js",
  "/node_modules/schedule/cjs/schedule-tracing.production.min.js",
  "/node_modules/schedule/cjs/schedule-tracing.profiling.min.js",
  "/node_modules/schedule/cjs/schedule.development.js",
  "/node_modules/schedule/cjs/schedule.production.min.js",
  "/node_modules/schedule/index.js",
  "/node_modules/schedule/package.json",
  "/node_modules/schedule/tracing-profiling.js",
  "/node_modules/schedule/tracing.js",
  "/node_modules/schedule/umd/schedule-tracing.development.js",
  "/node_modules/schedule/umd/schedule-tracing.production.min.js",
  "/node_modules/schedule/umd/schedule-tracing.profiling.min.js",
  "/node_modules/schedule/umd/schedule.development.js",
  "/node_modules/schedule/umd/schedule.production.min.js",
  "/node_modules/schedule/umd/schedule.profiling.min.js",
  "/node_modules/yallist/LICENSE",
  "/node_modules/yallist/README.md",
  "/node_modules/yallist/iterator.js",
  "/node_modules/yallist/package.json",
  "/node_modules/yallist/yallist.js",
]
`;
